k8s/1-first-k8s-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-world-yaml
spec:
  containers:
    - name: hello-world-yaml
      image: hello-world
      imagePullPolicy: Always
